[RED] Add test for Order controller